# singular-genomics.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG  CHANGELOG.md  CNAME  README.md  _output_files.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-mkdocs.yml
_core/: core.mkdocs.yml
_core/stylesheets/: extra.css  sg_colors.css
changelog/: index.html
data_import/: index.html
docs/: changelog.md  g4x_output.md  index.md
docs/_partials/: section_break.md
docs/changelog/: index.md
docs/contributing/: index.md
docs/g4x_data/: data_import.md  g4x_output.md  index.md  output_files.md  output_structure.md  tree.md
docs/g4x_data/output_files/: diagnostics.md  g4x_viewer.md  h_and_e.md  index.md  metrics.md  protein.md  rna.md  root_directory.md  segmentation.md  single_cell_data.md
docs/g4x_tutorials/: index.md  plot_spatial.md  segment_data.md
g4x_data/: index.html
g4x_data/data_import/: index.html
g4x_data/g4x_output/: index.html
g4x_data/output_files/: index.html
g4x_data/output_files/diagnostics/: index.html
g4x_data/output_files/g4x_viewer/: index.html
g4x_data/output_files/h_and_e/: index.html
g4x_data/output_files/metrics/: index.html
g4x_data/output_files/protein/: index.html
g4x_data/output_files/rna/: index.html
g4x_data/output_files/root_directory/: index.html
g4x_data/output_structure/: index.html
g4x_output/: index.html
g4x_tutorials/: index.html
g4x_tutorials/plot_spatial/: index.html
g4x_tutorials/segment_data/: index.html
search/: search_index.json
(+2 files in other folders)
