# this file is used to build the documentation site

[project]
name = "singular-genomics-github-io"
version = "0.0.0"
description = "Core Docs for Singular Genomics"

[dependency-groups]
docs = [
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.6",
]

[tool.uv]
required-version = ">=0.8.8"     # also update in Dockerfile
default-groups = ["docs"]
