# this file is used to build the documentation site

[project]
name = "singular-genomics-github-io"
version = "0.2.0"
description = "Core Docs for Singular Genomics"
requires-python = ">=3.10"

[dependency-groups]
docs = [
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.6",
]

[tool.uv]
required-version = ">=0.8.8"
default-groups = ["docs"]

[tool.uv-ship]
release-branch = 'main'
changelog-path = 'CHANGELOG'
